--- a/SoftHSM/misc/softhsm2.conf
+++ b/SoftHSM/misc/softhsm2.conf
@@ -1,5 +1,5 @@
 # SoftHSM v2 configuration file
 
-directories.tokendir = c:\SoftHSM2\var\softhsm2\tokens\
+directories.tokendir = .\tokens
 objectstore.backend = file
 log.level = INFO
