Updated files for 2.6.1

--- a/SoftHSM/misc/softhsm2.conf
+++ b/SoftHSM/misc/softhsm2.conf
@@ -1,6 +1,6 @@
 # SoftHSM v2 configuration file
 
-directories.tokendir = c:\SoftHSM2\var\softhsm2\tokens\
+directories.tokendir = C:\SoftHSM2\var\softhsm2\tokens\
 objectstore.backend = file
 log.level = INFO
 slots.removable = false
